# django-mapengine

./: .bumpversion.toml  .gitignore  .jshintrc  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  environment.yml  pyproject.toml
django_mapengine/: __init__.py  apps.py  choropleth.py  colorbrewer.py  conf.py  core.py  distill.py  layers.py  legend.py  managers.py  middleware.py  mvt.py  popups.py  registry.py  settings.py  setup.py  sources.py  urls.py  utils.py  views.py
django_mapengine/static/django_mapengine/css/: legend.css
django_mapengine/static/django_mapengine/js/: basemaps.js  choropleth.js  events.js  filter.js  helper.js  hover.js  init.js  init_map.js  layer.js  legend.js  map.js  popup.js  regions.js  results.js  store.js
django_mapengine/static/js/: init_map.js
django_mapengine/templates/django_mapengine/: legend.html  legend_item.html  map.html  map_basemaps.html  map_js.html  map_json.html
docs/: CLUSTERS.md  LAYERS.md  LEGEND.md  POPUPS.md
tests/: django_test_settings.py  test_choropleths.py  test_layers.py  test_sources.py
tests/test_app/: apps.py  models.py
